# djocial

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  example.env  pyproject.toml  setup.cfg
.github/workflows/: django.yml
apps/accounts/: urls.py
apps/accounts/tests/: test_authentication.py  test_functional.py  test_login_and_logout_implementation.py  test_views.py
apps/core/: urls.py  views.py
apps/core/tests/: test_index_views.py  test_views.py
config/: settings.py  urls.py
templates/: base.html
templates/core/: dashboard.html
templates/pages/: index.html
templates/registration/: login.html
